# pjyk

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  nginx.conf  pnpm-lock.yaml
analysis/: .gitignore  README.md  pyproject.toml
analysis/scripts/: popularity.py  score.py
analysis/src/pjyk_analysis/: engine.py  popularity.py  queries.py  score.py
api/: README.md  build.gradle.kts  settings.gradle.kts
apps/web-admin/: index.html  package.json
apps/web-admin/src/: main.ts
apps/web-client/: package.json  vite.config.ts
apps/web-client/public/: robots.txt
meta-anime-backend/: build.gradle.kts  gradle.properties  settings.gradle.kts
meta-anime-frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.test.json  vite.config.ts
meta-anime-frontend/public/: robots.txt  sitemap.xml
meta-anime-frontend/src/: main.ts  math.test.ts
meta-anime-frontend/src/api/: admin.ts  adminAnime.ts  adminFetch.ts  adminHttp.ts  adminMapping.ts  anime.ts  config.ts  http.ts
meta-anime-frontend/src/auth/: authGuard.ts  oidc.ts
meta-anime-frontend/src/components/: AnimeCard.vue  AnimeList.vue  AnimeListRow.vue  AnimeScoreItem.vue
meta-anime-frontend/src/config/: platforms.ts
meta-anime-frontend/src/constants/: enum-maps.ts  ui-options.ts
server/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
web/: .dockerignore  .oxfmtrc.jsonc  Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.jsonc
web/apps/client/: codegen.ts  (+3 more)
(+528 files in other folders)
